Made use of new language feature